--- a/.github/workflows/deploys/test-deploy.yml
+++ b/.github/workflows/deploys/test-deploy.yml
@@ -1,9 +1,9 @@
-name: Deploy to dev environment
+name: Deploy to test environment
 
 on:
   push:
     branches:
-      - main
+      - test
 
 jobs:
   build:
@@ -29,4 +29,4 @@ jobs:
         FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
       run: |
         npm install -g firebase-tools
-        firebase deploy --only hosting:diu-cse-alumni-public-prod --project diu-cse-alumni-7f731
+        firebase deploy --only hosting:diu-cse-alumni-public-test --project diu-cse-alumni-7f731
