--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint diucse-alumni-public",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
