--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.2",
     "autoprefixer": "^10.4.21",
     "firebase": "^11.4.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
