--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.1.2",
     "autoprefixer": "^10.4.21",
     "firebase": "^11.4.0",
+    "i18n-iso-countries": "^7.14.0",
+    "libphonenumber-js": "^1.12.6",
     "lodash": "^4.17.21",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
