--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "i18n-iso-countries": "^7.14.0",
     "libphonenumber-js": "^1.12.6",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
