--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "autoprefixer": "^10.4.21",
     "firebase": "^11.4.0",
     "lodash-es": "^4.17.21",
+    "lucide-react": "^0.503.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
