--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.5",
     "@tailwindcss/vite": "^4.1.2",
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.21",
     "firebase": "^11.4.0",
-    "framer-motion": "^12.9.4",
+    "framer-motion": "^12.10.0",
     "lodash-es": "^4.17.21",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.503.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.3",
     "tailwindcss": "^4.1.3"
   },
