--- a/firebase.json
+++ b/firebase.json
@@ -2,15 +2,24 @@
   "hosting": [
     {
       "site": "diu-cse-alumni-public-dev",
-      "public": "dist"
+      "public": "dist",
+      "rewrites": [
+        { "source": "**", "destination": "/index.html" }
+      ]
     },
     {
       "site": "diu-cse-alumni-public-test",
-      "public": "dist"
+      "public": "dist",
+      "rewrites": [
+        { "source": "**", "destination": "/index.html" }
+      ]
     },
     {
       "site": "diu-cse-alumni-public-prod",
-      "public": "dist"
+      "public": "dist",
+      "rewrites": [
+        { "source": "**", "destination": "/index.html" }
+      ]
     }
   ]
 }
