--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,9 +20,9 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
   },
   "include": [
     "src"
-  ]
+  ],
 }
