--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -21,10 +21,10 @@ jobs:
           node-version: '20'
 
       - name: Install dependencies
-        run: npm install
+        run: yarn install
 
       - name: Run linter
-        run: npm run lint
+        run: yarn lint
 
       - name: Build project
-        run: npm run build
+        run: yarn build
