--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/router": "^20.0.0",
     "@auth0/auth0-angular": "^2.3.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "ngx-quill": "^28.0.1",
     "postcss": "^8.5.6",
     "quill": "^2.0.3",
@@ -31,6 +33,7 @@
     "@angular/cli": "^20.0.2",
     "@angular/compiler-cli": "^20.0.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/html2canvas": "^0.5.35",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.7.0",
     "karma": "~6.4.0",
